--- a/type/dark.css
+++ b/type/dark.css
@@ -110,7 +110,7 @@ progress::-webkit-progress-value {
 
 /*Login background*/
 #loginPage {
-  background: url(https://i.imgur.com/9vL4iNf.png) !important; 
+  background: url(https://raw.githubusercontent.com/CTalvio/Ultrachromic/main/assets/background.png) !important;
   background-size: cover !important;
 }
 
