--- a/login/login_minimalistic.css
+++ b/login/login_minimalistic.css
@@ -17,6 +17,6 @@
   display: none
 }
 #loginPage {
-  background: url(https://i.imgur.com/9vL4iNf.png) !important; 
+  background: url(https://raw.githubusercontent.com/CTalvio/Ultrachromic/main/assets/background.png) !important;
   background-size: cover !important;
 }
