--- a/type/colorful.css
+++ b/type/colorful.css
@@ -12,7 +12,7 @@
 
 /*Login background*/
 #loginPage {
-  background: url(https://i.imgur.com/9vL4iNf.png) !important; 
+  background: url(https://raw.githubusercontent.com/CTalvio/Ultrachromic/main/assets/background.png) !important;
   background-size: cover !important;
 }
 
