--- a/type/light.css
+++ b/type/light.css
@@ -88,7 +88,7 @@ a[data-role="button"] {
 
 /*Login background*/
 #loginPage {
-  background: url(https://imgur.com/S3WiZIM.png) !important;
+  background: url(https://raw.githubusercontent.com/CTalvio/Ultrachromic/main/assets/background.png) !important;
   background-size: cover !important;
 }
 
